force-app/main/default/objects/Account/fields/Soci_t_cr_e_par_un_dipl_m__c.field-meta.xml
<CustomField>
    <fullName>Soci_t_cr_e_par_un_dipl_m__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Société créée par un diplômé</label>
    <type>Checkbox</type>
</CustomField>