force-app/main/default/objects/Account/fields/Somme_des_versements_Annee_N_1__c.field-meta.xml
<CustomField>
    <fullName>Somme_des_versements_Annee_N_1__c</fullName>
    <label>Somme versements année N-1</label>
    <summarizedField>Versement_OCTA__c.Montant_net__c</summarizedField>
    <summaryFilterItems>
        <field>Versement_OCTA__c.Exercice_Collecte__c</field>
        <operation>equals</operation>
        <value>2018</value>
    </summaryFilterItems>
    <summaryForeignKey>Versement_OCTA__c.Compte_Versement_OCTA__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>