force-app/main/default/objects/Account/fields/Somme_Montant_Don__c.field-meta.xml
<CustomField>
    <fullName>Somme_Montant_Don__c</fullName>
    <label>Total Partenariat Entreprise</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Partenariat Fundraising</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Accord de principe, Contrat signé, Partenariat terminé</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>