force-app/main/default/objects/Account/fields/Stade_d_avancement__c.field-meta.xml
<CustomField>
    <fullName>Stade_d_avancement__c</fullName>
    <label>Stade d&apos;avancement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Idéation</fullName>
            </value>
            <value>
                <fullName>Beta-test produit, 1ers clients ...</fullName>
            </value>
            <value>
                <fullName>Levée de fonds</fullName>
            </value>
            <value>
                <fullName>Croissance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>