force-app/main/default/objects/Account/fields/Supply_chain_logistic_purchasing__c.field-meta.xml
<CustomField>
    <fullName>Supply_chain_logistic_purchasing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supply chain, logistic, purchasing</label>
    <type>Checkbox</type>
</CustomField>