force-app/main/default/objects/Account/fields/Synchro_Hivebrite__c.field-meta.xml
<CustomField>
    <fullName>Synchro_Hivebrite__c</fullName>
    <description>Date et heure de dernière synchro réussie avec Hivebrite</description>
    <label>Dernière synchro réussie avec Hivebrite</label>
    <type>DateTime</type>
</CustomField>