force-app/main/default/objects/Account/fields/Technologie_produit__c.field-meta.xml
<CustomField>
    <fullName>Technologie_produit__c</fullName>
    <label>Technologie produit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>App mobile</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Software (Saas, Iaas, Paas)</fullName>
            </value>
            <value>
                <fullName>Intelligence Artificielle</fullName>
            </value>
            <value>
                <fullName>AR - VR</fullName>
            </value>
            <value>
                <fullName>Robotic</fullName>
            </value>
            <value>
                <fullName>Impression 3D</fullName>
            </value>
            <value>
                <fullName>Blockchain</fullName>
            </value>
            <value>
                <fullName>Internet Of Things</fullName>
            </value>
            <value>
                <fullName>5G</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>