force-app/main/default/objects/Account/fields/Total_opportunit_s_li_es__c.field-meta.xml
<CustomField>
    <fullName>Total_opportunit_s_li_es__c</fullName>
    <inlineHelpText>Ce champ somme l&apos;ensemble des montants des opportunités liées à ce compte</inlineHelpText>
    <label>Versement compte N</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Taxe</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Exercice_de_collecte__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Conclu</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>