force-app/main/default/objects/Account/fields/Total_Partenariat_Entreprise_en_cours__c.field-meta.xml
<CustomField>
    <fullName>Total_Partenariat_Entreprise_en_cours__c</fullName>
    <description>Somme de toutes les opportunités Partenariat sur un compte donné hors statut commercial « Partenariat terminé ».</description>
    <label>Total Partenariat Entreprise en cours</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Clos (Perdu), Partenariat terminé</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Partenariat Fundraising</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>