force-app/main/default/objects/Account/fields/Tranche_de_CA_Tranche_de_CA_entit__c.field-meta.xml
<CustomField>
    <fullName>Tranche_de_CA_Tranche_de_CA_entit__c</fullName>
    <label>Tranche de CA / Tranche de CA entité</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Moins de 0,5 million d&apos;euros</fullName>
            </value>
            <value>
                <fullName>De 0,5 a moins de 1 M€</fullName>
            </value>
            <value>
                <fullName>De 1 M€ a moins de 2 M€</fullName>
            </value>
            <value>
                <fullName>De 2 M€ a moins de 5 M€</fullName>
            </value>
            <value>
                <fullName>De 5 M€ a moins de 10 M€</fullName>
            </value>
            <value>
                <fullName>De 10 M€ a moins de 20 M€</fullName>
            </value>
            <value>
                <fullName>De 20 M€ a moins de 50 M€</fullName>
            </value>
            <value>
                <fullName>De 50 M€ a moins de 100 M€</fullName>
            </value>
            <value>
                <fullName>De 100 M€ a moins de 200 M€</fullName>
            </value>
            <value>
                <fullName>200 M€ ou plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>