force-app/main/default/objects/Account/fields/Tranche_effectif_groupe__c.field-meta.xml
<CustomField>
    <fullName>Tranche_effectif_groupe__c</fullName>
    <label>Tranche effectif groupe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>De 0 à 9</fullName>
            </value>
            <value>
                <fullName>De 10 à 49</fullName>
            </value>
            <value>
                <fullName>De 50 à 249</fullName>
            </value>
            <value>
                <fullName>De 250 à 499</fullName>
            </value>
            <value>
                <fullName>De 500 à 999</fullName>
            </value>
            <value>
                <fullName>De 1000 à 1999</fullName>
            </value>
            <value>
                <fullName>De 2000 à 4999</fullName>
            </value>
            <value>
                <fullName>De 5000 à 9999</fullName>
            </value>
            <value>
                <fullName>10 000 et plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>