force-app/main/default/objects/Account/fields/Tranche_verseur__c.field-meta.xml
<CustomField>
    <fullName>Tranche_verseur__c</fullName>
    <label>Niveau de partenariat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>