force-app/main/default/objects/Account/fields/type_Cabinets_r_f_rents__c.field-meta.xml
<CustomField>
    <fullName>type_Cabinets_r_f_rents__c</fullName>
    <description>Ce champ permet de sélectionner les entreprises intervenants dans le dispositif carrière</description>
    <label>Type Cabinets référents</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Associations</fullName>
            </value>
            <value>
                <fullName>Coaching</fullName>
            </value>
            <value>
                <fullName>Outplacement</fullName>
            </value>
            <value>
                <fullName>Recrutement</fullName>
            </value>
            <value>
                <fullName>RH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>