force-app/main/default/objects/Account/fields/Type_d_tablissement__c.field-meta.xml
<CustomField>
    <fullName>Type_d_tablissement__c</fullName>
    <label>Type d&apos;établissement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Direction Régionale</fullName>
            </value>
            <value>
                <fullName>Etablissement Secondaire</fullName>
            </value>
            <value>
                <fullName>Holding-Maison Mère Groupe</fullName>
            </value>
            <value>
                <fullName>Siège</fullName>
            </value>
            <value>
                <fullName>Siège Europe</fullName>
            </value>
            <value>
                <fullName>Siège France</fullName>
            </value>
            <value>
                <fullName>Siège Monde</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>