force-app/main/default/objects/Account/fields/Util_Count__c.field-meta.xml
<CustomField>
    <fullName>Util_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Compte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>