force-app/main/default/objects/Account/fields/Versement_consolid_par_gorupe__c.field-meta.xml
<CustomField>
    <fullName>Versement_consolid_par_gorupe__c</fullName>
    <label>Versements groupe N</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>