force-app/main/default/objects/Account/fields/Versements_compte_N_1__c.field-meta.xml
<CustomField>
    <fullName>Versements_compte_N_1__c</fullName>
    <label>Versements compte N-1</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Taxe</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Conclu</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Exercice_de_collecte__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>