force-app/main/default/objects/Account/fields/Versements_compte_N_1_old__c.field-meta.xml
<CustomField>
    <fullName>Versements_compte_N_1_old__c</fullName>
    <description>Versement taxe du compte sur l&apos;exercice N-1</description>
    <inlineHelpText>Versement taxe du compte sur l&apos;exercice N-1</inlineHelpText>
    <label>Versements compte N-1 (abandonné)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>