force-app/main/default/objects/Account/fields/Versements_groupe_N_1__c.field-meta.xml
<CustomField>
    <fullName>Versements_groupe_N_1__c</fullName>
    <description>Versements Consolidés Groupe Exercice N-1</description>
    <inlineHelpText>Versements Consolidés Groupe Exercice N-1</inlineHelpText>
    <label>Versements groupe N-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>