force-app/main/default/objects/Account/fields/Versements_groupe_N_2__c.field-meta.xml
<CustomField>
    <fullName>Versements_groupe_N_2__c</fullName>
    <description>Versements Consolidés Groupe Exercice N-2</description>
    <inlineHelpText>Versements Consolidés Groupe Exercice N-2</inlineHelpText>
    <label>Versements groupe N-2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>