force-app/main/default/objects/Account/recordTypes/SIS_Association.recordType-meta.xml
<RecordType>
    <fullName>SIS_Association</fullName>
    <active>false</active>
    <label>Association</label>
</RecordType>