force-app/main/default/objects/Account/recordTypes/SIS_Public_organization.recordType-meta.xml
<RecordType>
    <fullName>SIS_Public_organization</fullName>
    <active>true</active>
    <label>Public organization</label>
</RecordType>