force-app/main/default/objects/Account/validationRules/Etat_ObligatoireCourante.validationRule-meta.xml
<ValidationRule>
    <fullName>Etat_ObligatoireCourante</fullName>
    <active>true</active>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
and( 
OR 
( 
 CodePays__c  = &quot;ÉTATS-UNIS&quot; , 
 CodePays__c  = &quot;CANADA&quot; 
), 
isblank( Adresse_Etat1__c  ) 
)
)</errorConditionFormula>
    <errorDisplayField>Adresse_Etat1__c</errorDisplayField>
    <errorMessage>Le champs Etat est obligatoire</errorMessage>
</ValidationRule>