force-app/main/default/objects/Account/validationRules/Etat_ObligatoireFacturation.validationRule-meta.xml
<ValidationRule>
    <fullName>Etat_ObligatoireFacturation</fullName>
    <active>false</active>
    <errorConditionFormula>and(   
    OR
    (
       Adresse_Pays_WF__c  =  &quot;ÉTATS-UNIS&quot; , 
       Adresse_Pays_WF__c  = &quot;CANADA&quot;
    ),
    isblank(Adresse_facturation_Etat1__c )
)</errorConditionFormula>
    <errorDisplayField>Adresse_facturation_Etat1__c</errorDisplayField>
    <errorMessage>Le champs Etat doit être obligatoire</errorMessage>
</ValidationRule>