force-app/main/default/objects/Account/validationRules/Mandatory_Academic_exchange_period.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Academic_exchange_period</fullName>
    <active>true</active>
    <description>Academic exchange period has to be filled when Academic exchange is checked.</description>
    <errorConditionFormula>AND (SIS_Academic_exchange__c = true,
ISBLANK(SIS_Academic_exchange_period__c ) )</errorConditionFormula>
    <errorDisplayField>SIS_Academic_exchange_period__c</errorDisplayField>
    <errorMessage>Please fill Academic exchange period.</errorMessage>
</ValidationRule>