force-app/main/default/objects/Account/validationRules/Mandatory_International_exchange_period.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_International_exchange_period</fullName>
    <active>true</active>
    <description>International exchange period has to be filled when international exchange is checked.</description>
    <errorConditionFormula>AND ( SIS_International_exchange__c = true,
ISBLANK(SIS_International_exchange_period__c) )</errorConditionFormula>
    <errorDisplayField>SIS_International_exchange_period__c</errorDisplayField>
    <errorMessage>Please fill International exchange period.</errorMessage>
</ValidationRule>