force-app/main/default/objects/Account/validationRules/Mandatory_Internship_period.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Internship_period</fullName>
    <active>true</active>
    <description>Internship period has to be filled when Internship is checked.</description>
    <errorConditionFormula>AND ( SIS_Internship__c = true,
					  ISBLANK(SIS_Internship_period__c)  )</errorConditionFormula>
    <errorDisplayField>SIS_Internship_period__c</errorDisplayField>
    <errorMessage>Please fill internship period.</errorMessage>
</ValidationRule>