force-app/main/default/objects/Account/validationRules/RegionVsEtat.validationRule-meta.xml
<ValidationRule>
    <fullName>RegionVsEtat</fullName>
    <active>false</active>
    <description>Cette règle de validation permet de d&apos;empêcher de saisir la région et l&apos;état au même temps</description>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND(    D_partement__pc     &lt;&gt; &quot;&quot;,    Etat__pc  &lt;&gt; &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Vérifiez les champs Région et Etat</errorMessage>
</ValidationRule>