force-app/main/default/objects/Account/validationRules/RG_Compte01_Etat_ObligatoireCourante.validationRule-meta.xml
<ValidationRule>
    <fullName>RG_Compte01_Etat_ObligatoireCourante</fullName>
    <active>true</active>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
and( 
OR 
( 
  Adresse_Cour_Pays_WF__c   = &quot;ÉTATS-UNIS&quot; , 
  Adresse_Cour_Pays_WF__c  = &quot;CANADA&quot; 
), 
isblank( Adresse_Etat1__c  ) 
)
)</errorConditionFormula>
    <errorDisplayField>Adresse_Etat1__c</errorDisplayField>
    <errorMessage>Le champ Etat est obligatoire</errorMessage>
</ValidationRule>