force-app/main/default/objects/Account/validationRules/RG_Compte02_Etat_ObligatoireFacturation.validationRule-meta.xml
<ValidationRule>
    <fullName>RG_Compte02_Etat_ObligatoireFacturation</fullName>
    <active>true</active>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( and(   
    OR
    (
       Adresse_Pays_WF__c  =  &quot;ÉTATS-UNIS&quot; , 
       Adresse_Pays_WF__c  = &quot;CANADA&quot;
    ),
    isblank(Adresse_facturation_Etat1__c )
)
)</errorConditionFormula>
    <errorDisplayField>Adresse_facturation_Etat1__c</errorDisplayField>
    <errorMessage>Le champs Etat doit être obligatoire</errorMessage>
</ValidationRule>