force-app/main/default/objects/Account/validationRules/RG_Compte03_RegionVsEtat_Facturation.validationRule-meta.xml
<ValidationRule>
    <fullName>RG_Compte03_RegionVsEtat_Facturation</fullName>
    <active>false</active>
    <description>Cette règle de validation permet de d&apos;empêcher de saisir la région et l&apos;état au même temps dans l&apos;adresse de facturation.</description>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND(  Adresse_facturation_d_partement__c   &lt;&gt; &quot;&quot;,  Adresse_facturation_Etat1__c &lt;&gt; &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Vérifiez les champs Région et  Etat dans l&apos;adresse de facturation.</errorMessage>
</ValidationRule>