force-app/main/default/objects/Account/validationRules/RG_Compte04_SIRET_Controle_integrite.validationRule-meta.xml
<ValidationRule>
    <fullName>RG_Compte04_SIRET_Controle_integrite</fullName>
    <active>true</active>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; (
AND(

MOD(
VALUE(MID(SIRET__c,1,1))+
IF(VALUE(MID(SIRET__c,2,1))&lt;5,
VALUE(MID(SIRET__c,2,1))*2,
VALUE(MID(TEXT(VALUE(MID(SIRET__c,2,1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(SIRET__c,2,1))*2),2,1))
)+ 

VALUE(MID(SIRET__c,3,1))+
IF(VALUE(MID(SIRET__c,4,1))&lt;5,
VALUE(MID(SIRET__c,4,1))*2,
VALUE(MID(TEXT(VALUE(MID(SIRET__c,4,1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(SIRET__c,4,1))*2),2,1))
)+ 

VALUE(MID(SIRET__c,5,1))+
IF(VALUE(MID(SIRET__c,6,1))&lt;5,
VALUE(MID(SIRET__c,6,1))*2,
VALUE(MID(TEXT(VALUE(MID(SIRET__c,6,1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(SIRET__c,6,1))*2),2,1))
)+ 


VALUE(MID(SIRET__c,7,1))+
IF(VALUE(MID(SIRET__c,8,1))&lt;5,
VALUE(MID(SIRET__c,8,1))*2,
VALUE(MID(TEXT(VALUE(MID(SIRET__c,8,1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(SIRET__c,8,1))*2),2,1))
)+ 
VALUE(MID(SIRET__c,9,1))

,10)&lt;&gt;0	


,
CodePays__r.Code_Pays__c = &quot;FRA&quot;
) || 
				(not ISNUMBER(SIRET__c)&amp;&amp;CodePays__r.Code_Pays__c = &quot;FRA&quot;)
)</errorConditionFormula>
    <errorDisplayField>SIRET__c</errorDisplayField>
    <errorMessage>L&apos;identifiant saisi n’est pas un SIRET valide. Vérifiez votre saisie !</errorMessage>
</ValidationRule>