force-app/main/default/objects/Account/validationRules/RG_Compte05_RegionVsEtat_Courante.validationRule-meta.xml
<ValidationRule>
    <fullName>RG_Compte05_RegionVsEtat_Courante</fullName>
    <active>false</active>
    <description>Cette règle de validation permet de d&apos;empêcher de saisir la région et l&apos;état au même temps dans l&apos;adresse courante.</description>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND(    Departement__c    &lt;&gt; &quot;&quot;,    Adresse_Etat1__c    &lt;&gt; &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Vérifiez les champs Région et Etat dans l&apos;adresse courante</errorMessage>
</ValidationRule>