force-app/main/default/objects/Account/validationRules/RG_Compte06_Pays_ObligatoireCourante.validationRule-meta.xml
<ValidationRule>
    <fullName>RG_Compte06_Pays_ObligatoireCourante</fullName>
    <active>true</active>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
$User.ProfileId &lt;&gt; &apos;00ew0000001GE7X&apos;
&amp;&amp;

(ISNEW())
&amp;&amp; 
( 
AND( 

ISBLANK(  CodePays__c  ),
$User.LastName &lt;&gt; &apos;Interface&apos;  
)


)</errorConditionFormula>
    <errorDisplayField>CodePays__c</errorDisplayField>
    <errorMessage>Le champ Pays est obligatoire.</errorMessage>
</ValidationRule>