force-app/main/default/objects/Account/validationRules/RG_Compte09_Ville_Obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>RG_Compte09_Ville_Obligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
$User.ProfileId &lt;&gt; &apos;00ew0000001GE7X&apos;
&amp;&amp;

(ISNEW())
&amp;&amp;
( 
AND( 

ISBLANK(     Adresse_Ville__c ), 
$User.LastName&lt;&gt; &apos;Interface&apos;    
)
)</errorConditionFormula>
    <errorDisplayField>Adresse_Ville__c</errorDisplayField>
    <errorMessage>Le champ Ville est obligatoire</errorMessage>
</ValidationRule>