force-app/main/default/objects/Account/validationRules/RG_Compte12_SIRET_Controle_14_chiffres.validationRule-meta.xml
<ValidationRule>
    <fullName>RG_Compte12_SIRET_Controle_14_chiffres</fullName>
    <active>true</active>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
CodePays__r.Code_Pays__c = &quot;FRA&quot; 
&amp;&amp;
AND(LEN(SIRET__c) &lt;&gt; 14 )</errorConditionFormula>
    <errorDisplayField>SIRET__c</errorDisplayField>
    <errorMessage>Un code SIRET est composé de 14 chiffres. Vérifiez votre saisie</errorMessage>
</ValidationRule>